fixed mobile menu overlap issue

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -16,6 +16,7 @@
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
+    --color-gray-900: oklch(21% 0.034 264.665);
     --color-gray-950: oklch(13% 0.028 261.692);
     --color-black: #000;
     --color-white: #fff;
@@ -207,6 +208,9 @@
   }
   .z-10 {
     z-index: 10;
+  }
+  .z-12 {
+    z-index: 12;
   }
   .z-60 {
     z-index: 60;
@@ -950,11 +954,6 @@
       margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
-  .truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
@@ -976,6 +975,9 @@
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .bg-gray-900 {
+    background-color: var(--color-gray-900);
   }
   .bg-gray-950 {
     background-color: var(--color-gray-950);
@@ -1034,9 +1036,6 @@
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
-  }
   .pt-14 {
     padding-top: calc(var(--spacing) * 14);
   }
@@ -1087,6 +1086,9 @@
   }
   .text-gray-700 {
     color: var(--color-gray-700);
+  }
+  .text-gray-900 {
+    color: var(--color-gray-900);
   }
   .text-gray-950 {
     color: var(--color-gray-950);
@@ -1233,7 +1235,7 @@
   position: relative;
   top: 5px;
   right: 0px;
-  z-index: 1;
+  z-index: 900;
   -webkit-user-select: none;
   user-select: none;
 }
@@ -1254,7 +1256,7 @@
   left: -5px;
   cursor: pointer;
   opacity: 0;
-  z-index: 2;
+  z-index: 999;
   -webkit-touch-callout: none;
 }
 #menuToggle span {
@@ -1265,7 +1267,7 @@
   position: relative;
   background: #cdcdcd;
   border-radius: 3px;
-  z-index: 1;
+  z-index: 998;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease;
 }
@@ -1288,7 +1290,6 @@
   transform: rotate(-45deg) translate(0, -1px);
 }
 #menu {
-  display: none;
   position: absolute;
   width: 300px;
   height: 500px;
@@ -1299,8 +1300,11 @@
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
-  transform: translate(100%, 0);
+  transform: translate(200%, 0);
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  opacity: 0;
+  visibility: hidden;
+  z-index: 997;
 }
 #menu li {
   padding: 10px 0;
@@ -1308,7 +1312,8 @@
 }
 #menuToggle input:checked ~ ul {
   transform: translate(-70%, 0);
-  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 .prose-lg ul li {
   list-style-type: disc;
